--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "dev:server": "nodemon server.js",
     "dev:client": "react-scripts start",
     "startlocalbuild": "react-scripts build && node server.js",
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "heroku-postbuild": "yarn  && yarn run build",
     "test": "react-scripts test",
